--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.18.0",
     "bulma": "^0.6.2",
     "material-ui": "^1.0.0-beta.40",
+    "moment": "^2.22.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
