--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui": "^1.0.0-beta.40",
     "moment": "^2.22.0",
     "react": "^16.3.1",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.1",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
